--- a/TRABALHO/navbar.css
+++ b/TRABALHO/navbar.css
@@ -34,8 +34,34 @@ nav li {
   display: inline-block;
   margin-left: 50px;
   padding-top: 23px;
+
+  position: relative;
 }
 
 nav a {
-  
+  color: #444;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+nav a:hover {
+  color: black;
+}
+
+nav a::before {
+  content: " ";
+  display: block;
+  height: 5px;
+  background-color: #444;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
 }
