--- a/TRABALHO/navbar.css
+++ b/TRABALHO/navbar.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
+
 body {
   margin: 0;
   background: #222;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Comfortaa", cursive;
   font-weight: 300;
 }
 
@@ -11,7 +13,7 @@ body {
 }
 
 header {
-  background: #55d6aa;
+  background: #d66855;
 }
 
 header::after {
@@ -39,7 +41,7 @@ nav li {
 }
 
 nav a {
-  color: #444;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
@@ -53,7 +55,7 @@ nav a::before {
   content: " ";
   display: block;
   height: 5px;
-  background-color: #444;
+  background-color: rgb(0, 0, 0);
 
   position: absolute;
   top: 0;
