--- a/TRABALHO/navbar.css
+++ b/TRABALHO/navbar.css
@@ -26,7 +26,7 @@ header::after {
 }
 
 nav {
-  float: left;
+  float: right;
 }
 
 nav ul {
@@ -71,11 +71,16 @@ nav a:hover::before {
   width: 100%;
 }
 
+
 .slider {
   width: 800px;
   height: 500px;
   overflow: hidden;
   position: absolute;
+
+  left: 50%;
+  margin-top: 10px;
+  margin-left: -400px;
 }
 
 .slides {
@@ -98,7 +103,7 @@ input {
 }
 
 .manual-btn {
-  border: 2px solid #fff;
+  border: 2px solid rgb(255, 255, 255);
   padding: 10px;
   border-radius: 20px;
   cursor: pointer;
@@ -137,5 +142,5 @@ input {
 }
 
 #radio4:checked ~ .first {
-  margin-left: -;
+  margin-left: -75%;
 }
