--- a/PASTA DE ALHO/homepage.css
+++ b/PASTA DE ALHO/homepage.css
@@ -3,8 +3,12 @@ body {
   padding: 0;
   height: 100vh;
 
-  background: rgb(224, 224, 224);
+  background: rgb(255, 255, 255);
 
+}
+
+.logo {
+  float: left;
 }
 
 .container {
@@ -16,6 +20,13 @@ body {
 header {
   background: #cdb7ff;
 }
+
+header::after {
+  content: " ";
+  display: table;
+  clear: both;
+}
+
 
 nav {
   text-align: center;
@@ -43,16 +54,25 @@ nav a {
   text-transform: uppercase;
   font-size: 14px;
 
-  transition-duration: 350ms;
+  transition-duration: 500ms;
   transition-timing-function: cubic-bezier(1, -0.02, 0.23, 1.26);
   transition-delay: 10ms;
+
+  transition: all 0.6s;
 }
 
 nav a:hover {
   color: rgb(0, 0, 0);
   font-size: 16px;
   font-weight: bold;
+  transition-duration: 500ms all;  
+  transition: all 0.6s;
 }
+
+.ul-container {
+  margin-top: 45px;
+}
+
 
 .texto {
   position: relative;
@@ -68,8 +88,3 @@ nav a:hover {
   padding-top: 20px;
 }
 
-.logo{
-  display: flex;
-
-  float: left;
-}
