--- a/PASTA DE ALHO/homepage.css
+++ b/PASTA DE ALHO/homepage.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&display=swap');
 
 body {
   margin: 0;
@@ -73,6 +74,7 @@ nav a:hover {
 
 .ul-container {
   margin-top: 45px;
+  margin-right: 20%;
 }
 
 
@@ -88,7 +90,6 @@ nav a:hover {
   display: block;
   height: 70vh;
   width: 60%;
-
 }
 
 .objectImage {
@@ -99,6 +100,13 @@ nav a:hover {
   border-radius: 20px;
 
   position: relative;
+    box-shadow: 0 0 8px;
+  
+  transition-duration: 500ms;
+}
+
+.objectImage:hover {
+  height: 105%;
 }
 
 .titulo {
@@ -110,14 +118,24 @@ nav a:hover {
   font-size: 100px;
   text-shadow: black  2px 0;
   color: rgb(255, 255, 255);
+
+  transition-duration: 500ms;
 }
+
+.titulo:hover {
+  margin-left: 4rem;
+  text-shadow: black -2px 0;
+  font-size: 103px;
+}
+
 
 .caixatexto {
   content: normal;
-  display: block;
+  display: flex;
   height: 70vh;
   width: 35vw;
-  background: red;
+  background: rgb(255, 255, 255);
+  box-shadow: black 0px 0px 8px;
   border-radius: 20px;
   position: absolute;
 
@@ -126,16 +144,54 @@ nav a:hover {
 
   margin-top: -35.3%;
   margin-left: 63%;
+
+  transition-duration: 500ms;
 }
 
-
+.caixatexto:hover {
+  height: 73vh;
+}
 
 .texto {
-  color: rgb(8, 8, 8);
-  font-size: 20px;
-  text-align: justify;
   position: absolute;
+  height: 80%;
+  width: 80%;
 
-  margin-top: 100px;
-  background: purple;
+  margin-top: 60px;
+  
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+
+.paragrafo {
+  font-family: 'Bodoni Moda', serif;
+  color: rgb(8, 8, 8);
+  font-size: 25px;
+  text-align: center;
+
+  margin-top: 80%;
+}
+
+.paragrafo a {
+  color: #aa87fc;
+  text-decoration: none;
+
+  transition-duration: 500ms;
+}
+
+.paragrafo a:hover {
+  color: #4a3283;
+  font-size: 27px;
+}
+
+.caixatexto a img {
+  margin-top: -25px;
+
+  transition-duration: 500ms;
+}
+
+.caixatexto a img:hover {
+  height: 510px;
+  width: 510px;
 }
