--- a/REPLICA/style.css
+++ b/REPLICA/style.css
@@ -25,48 +25,34 @@ header::after {
 }
 
 nav {
-  float: right;
 }
 
 nav ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-left: 25%;
+  
 }
 
 nav li {
   font-family:'8-bit Operator+ Bold', monospace;
   text-shadow: 0 2px #000000;
   display: inline-block;
-padding: 15px;
+  padding: 15px;
+  padding-left: 80px ;
 
   position: relative;
+  
 }
 
 nav a {
   color: rgb(255, 255, 255);
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 nav a:hover {
-  color: rgb(255, 255, 255);
-}
-
-nav a::before {
-  content: " ";
-  display: block;
-  height: 5px;
-  background-color: rgb(255, 255, 255);
-
-  position: absolute;
-  top: 0;
-  width: 0%;
-
-  transition: all ease-in-out 250ms;
-}
-
-nav a:hover::before {
-  width: 100%;
+  color: #D5D3F4;
 }
