--- a/REPLICA/style.css
+++ b/REPLICA/style.css
@@ -1,4 +1,4 @@
-@font-face {font-family: "8-bit Operator+ Bold";src: url("font/8bitOperatorPlus-Bold.eot?") format("eot"), url("font/8bitOperatorPlus-Bold.woff") format("woff"), url("font/8bitOperatorPlus-Bold.ttf") format("truetype"), url("font/8bitOperatorPlus-Bold.svg#8bitOperatorPlus-Bold") format("svg");font-weight: normal;font-style: normal;
+@font-face {font-family: "8-bit Operator+ Bold";src: url("assets/font/8bitOperatorPlus-Bold.eot?") format("eot"), url("assets/font/8bitOperatorPlus-Bold.woff") format("woff"), url("assets/font/8bitOperatorPlus-Bold.ttf") format("truetype"), url("assets/font/8bitOperatorPlus-Bold.svg#8bitOperatorPlus-Bold") format("svg");font-weight: normal;font-style: normal;
 }
 
 body {
@@ -91,3 +91,7 @@ small {
   color: gray;
 }
 
+.castle {
+  display: flex;
+  justify-content: center;
+}
