--- a/REPLICA/style.css
+++ b/REPLICA/style.css
@@ -91,6 +91,8 @@ small {
   color: gray;
 }
 
+/*---------------------CASTELO----------------------*/
+
 .castle {
   display: flex;
   justify-content: center;
