--- a/REPLICA/style.css
+++ b/REPLICA/style.css
@@ -62,6 +62,7 @@ nav a:hover {
   display: flex;
   justify-content: center;
   text-decoration: none;
+  text-align: center;
 
 }
 
@@ -87,7 +88,7 @@ h2 {
   line-height: 1.2;
 }
 
-small {
+.gray {
   color: gray;
 }
 
@@ -124,7 +125,14 @@ small {
   left: 29rem;
 }
 
+.button1 {
+  font-family:'8-bit Operator+ Bold', monospace;
+  font-size: large;
+
+}
+
 .trailer {
   justify-content: center;
   display: flex;
 }
+
